force-app/main/default/objects/Asset/fields/CCR_AccidentalDamageCounter__c.field-meta.xml
<CustomField>
    <fullName>CCR_AccidentalDamageCounter__c</fullName>
    <label>Accidental Damage Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>