force-app/main/default/objects/Asset/fields/CCR_CarePlusDueDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_CarePlusDueDate__c</fullName>
    <label>Care+ Due Date</label>
    <type>DateTime</type>
</CustomField>