force-app/main/default/objects/Asset/fields/CCR_CarePlusStatus__c.field-meta.xml
<CustomField>
    <fullName>CCR_CarePlusStatus__c</fullName>
    <label>Care+ Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>