force-app/main/default/objects/Asset/fields/CCR_CodentifyId__c.field-meta.xml
<CustomField>
    <fullName>CCR_CodentifyId__c</fullName>
    <description>Unique identifier of the device to be used as external key.</description>
    <externalId>true</externalId>
    <label>Codentify ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>