force-app/main/default/objects/Asset/fields/CCR_DefectiveDevice__c.field-meta.xml
<CustomField>
    <fullName>CCR_DefectiveDevice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By: CCR
Description: This field is to identify the defective device.</description>
    <label>Defective Device</label>
    <type>Checkbox</type>
</CustomField>