force-app/main/default/objects/Asset/fields/CCR_DeviceProductCode__c.field-meta.xml
<CustomField>
    <fullName>CCR_DeviceProductCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the related Material on the Material Object</description>
    <label>Device  Product Code</label>
    <referenceTo>CCR_Material__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>