force-app/main/default/objects/Asset/fields/CCR_EligibilityDueDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_EligibilityDueDate__c</fullName>
    <description>Used by: CCR. 
Description: It&apos;s to store information till when consumer is eligible for replace the device (Qure process).</description>
    <label>Replacement Eligibility Due Date</label>
    <type>Date</type>
</CustomField>