force-app/main/default/objects/Asset/fields/CCR_EligibleForReplacement__c.field-meta.xml
<CustomField>
    <fullName>CCR_EligibleForReplacement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used By: CCR
Description: This field is for the Device the Eligible for replacement.</description>
    <label>(QURE) Eligible For Replacement</label>
    <type>Checkbox</type>
</CustomField>