force-app/main/default/objects/Asset/fields/CCR_ExportIDAutonumber__c.field-meta.xml
<CustomField>
    <fullName>CCR_ExportIDAutonumber__c</fullName>
    <description>As-Is</description>
    <label>Export ID Autonumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>