force-app/main/default/objects/Asset/fields/CCR_ExternalReference__c.field-meta.xml
<CustomField>
    <fullName>CCR_ExternalReference__c</fullName>
    <description>Order Number, different by channel</description>
    <label>External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>