force-app/main/default/objects/Asset/fields/CCR_FactoryCode__c.field-meta.xml
<CustomField>
    <fullName>CCR_FactoryCode__c</fullName>
    <description>Factory Code, e.g. OX</description>
    <label>Factory Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>