force-app/main/default/objects/Asset/fields/CCR_FactoryName__c.field-meta.xml
<CustomField>
    <fullName>CCR_FactoryName__c</fullName>
    <description>Factory Name, e.g. Venture Corporation Limited</description>
    <label>Factory Name</label>
    <type>TextArea</type>
</CustomField>