force-app/main/default/objects/Asset/fields/CCR_FirstLinkDatetoCurrentContact__c.field-meta.xml
<CustomField>
    <fullName>CCR_FirstLinkDatetoCurrentContact__c</fullName>
    <description>Used By: CCR
Description: This field to store the first link date to the current contact</description>
    <label>First Link Date</label>
    <type>Date</type>
</CustomField>