force-app/main/default/objects/Asset/fields/CCR_Flag__c.field-meta.xml
<CustomField>
    <fullName>CCR_Flag__c</fullName>
    <description>Used by: CCR
Description: To show green/red flag depends on eligibility due date.</description>
    <formula>IF(ISBLANK(CCR_EligibilityDueDate__c), &quot;&quot;,
IF(CCR_EligibilityDueDate__c &gt;= TODAY(), IMAGE(&quot;/resource/WarrantyFlag/GreenFlag.png&quot;,&quot;Green&quot;,20,20),
IMAGE(&quot;/resource/WarrantyFlag/RedFlag.png&quot;,&quot;Red&quot;,20,20)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replacement Eligibility Flag</label>
    <type>Text</type>
</CustomField>