force-app/main/default/objects/Asset/fields/CCR_Image__c.field-meta.xml
<CustomField>
    <fullName>CCR_Image__c</fullName>
    <description>Shows the image of the related material</description>
    <formula>IMAGE(&quot;/resource/MaterialsImage/MaterialImages/&quot; + CCR_DeviceProductCode__r.CCR_Group__c +&quot;_&quot; +  TEXT(CCR_DeviceProductCode__r.CCR_BrandFamily__c)  +&quot;_&quot; + CCR_DeviceProductCode__r.CCR_ModelNumber__c +&quot;_&quot; + CCR_DeviceProductCode__r.CCR_Color__c + &quot;.png&quot;, &quot;&quot;,150,150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>