force-app/main/default/objects/Asset/fields/CCR_InternalId__c.field-meta.xml
<CustomField>
    <fullName>CCR_InternalId__c</fullName>
    <description>Device production internal ID serial number.</description>
    <externalId>true</externalId>
    <label>Internal ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>