force-app/main/default/objects/Asset/fields/CCR_MaterialDescription__c.field-meta.xml
<CustomField>
    <fullName>CCR_MaterialDescription__c</fullName>
    <description>Material Description</description>
    <formula>CCR_DeviceProductCode__r.CCR_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Description</label>
    <type>Text</type>
</CustomField>