force-app/main/default/objects/Asset/fields/CCR_MaterialGroupDescription__c.field-meta.xml
<CustomField>
    <fullName>CCR_MaterialGroupDescription__c</fullName>
    <description>Group Material description</description>
    <formula>CCR_DeviceProductCode__r.CCR_GroupDescription__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Group Description</label>
    <type>Text</type>
</CustomField>