force-app/main/default/objects/Asset/fields/CCR_NumberOfConsumers__c.field-meta.xml
<CustomField>
    <fullName>CCR_NumberOfConsumers__c</fullName>
    <description>Rollup summary to count the number of contacts</description>
    <inlineHelpText>Number of time the asset has been linked to the contact.</inlineHelpText>
    <label>Number of Link Cycles</label>
    <summaryFilterItems>
        <field>CCR_AssetLifeCycle__c.CCR_Action__c</field>
        <operation>equals</operation>
        <value>Link</value>
    </summaryFilterItems>
    <summaryForeignKey>CCR_AssetLifeCycle__c.CCR_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>