force-app/main/default/objects/Asset/fields/CCR_OriginaDesignMarket__c.field-meta.xml
<CustomField>
    <fullName>CCR_OriginaDesignMarket__c</fullName>
    <description>Market where the box will be commercialized</description>
    <formula>Product2.CCR_OriginalDesignMarket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Design Market</label>
    <type>Text</type>
</CustomField>