force-app/main/default/objects/Asset/fields/CCR_OriginalAsset__c.field-meta.xml
<CustomField>
    <fullName>CCR_OriginalAsset__c</fullName>
    <description>Codentify of the original asset (before replacement)</description>
    <label>Original Asset Codentify</label>
    <length>20</length>
    <type>Text</type>
</CustomField>