force-app/main/default/objects/Asset/fields/CCR_OriginalBox__c.field-meta.xml
<CustomField>
    <fullName>CCR_OriginalBox__c</fullName>
    <description>Codentify of the original box (before replacement)</description>
    <externalId>true</externalId>
    <label>Original Box Codentify</label>
    <length>20</length>
    <type>Text</type>
</CustomField>