force-app/main/default/objects/Asset/fields/CCR_Override__c.field-meta.xml
<CustomField>
    <fullName>CCR_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by: CCR
Description: To store information if eligibility result has been overwritten by the agent.</description>
    <label>Override</label>
    <type>Checkbox</type>
</CustomField>