force-app/main/default/objects/Asset/fields/CCR_OverrideReason__c.field-meta.xml
<CustomField>
    <fullName>CCR_OverrideReason__c</fullName>
    <description>Used by: CCR
Description: To store information why eligibility result was overwritten by the agent,</description>
    <label>Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unsatisfied customer</fullName>
            </value>
            <value>
                <fullName>Warranty Expiration</fullName>
            </value>
            <value>
                <fullName>Product issue not covered by fault tree</fullName>
            </value>
            <value>
                <fullName>적절한 고장코드 없음</fullName>
            </value>
            <value>
                <fullName>강성클레임 예외승인</fullName>
            </value>
            <value>
                <fullName>보증기간 예외승인</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>