force-app/main/default/objects/Asset/fields/CCR_ParentProductionDateTime__c.field-meta.xml
<CustomField>
    <fullName>CCR_ParentProductionDateTime__c</fullName>
    <description>Date of packaging production from itrack</description>
    <label>Packaging Date Time</label>
    <type>DateTime</type>
</CustomField>