force-app/main/default/objects/Asset/fields/CCR_ProductionDateTime__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProductionDateTime__c</fullName>
    <description>Date of device production from itrack</description>
    <label>Production Date Time</label>
    <type>DateTime</type>
</CustomField>