force-app/main/default/objects/Asset/fields/CCR_ProductionLineCode__c.field-meta.xml
<CustomField>
    <fullName>CCR_ProductionLineCode__c</fullName>
    <description>Production Line Code, e.g. 26</description>
    <label>Production Line Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>