force-app/main/default/objects/Asset/fields/CCR_PromotionApplied__c.field-meta.xml
<CustomField>
    <fullName>CCR_PromotionApplied__c</fullName>
    <description>Type of promotion applied</description>
    <label>Promotion Applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>