force-app/main/default/objects/Asset/fields/CCR_PurchaseChannel__c.field-meta.xml
<CustomField>
    <fullName>CCR_PurchaseChannel__c</fullName>
    <description>Used By: CCR
Description: This value is updated depending on the type of user.</description>
    <label>Purchase Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Retail</fullName>
            </value>
            <value>
                <fullName>Indirect Retail</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Field Sales Force</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>