force-app/main/default/objects/Asset/fields/CCR_PurchaseExternalReference__c.field-meta.xml
<CustomField>
    <fullName>CCR_PurchaseExternalReference__c</fullName>
    <description>As-Is</description>
    <label>Purchase External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>