force-app/main/default/objects/Asset/fields/CCR_ReplacedBy__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference of the replacement device to be populated by VF page or API only</description>
    <label>Replaced By</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets (Replaced by)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>