force-app/main/default/objects/Asset/fields/CCR_ReplacementChannel__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementChannel__c</fullName>
    <description>Replacement channel (online, retailer, kiosk, …)</description>
    <label>(QURE) Replacement Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>