force-app/main/default/objects/Asset/fields/CCR_ReplacementChannelNew__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementChannelNew__c</fullName>
    <description>Used By: CCR
Description: This value is updated depending on the type of user.</description>
    <label>Replacement Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Retail</fullName>
            </value>
            <value>
                <fullName>Indirect Retail</fullName>
            </value>
            <value>
                <fullName>Field Sales Force</fullName>
            </value>
            <value>
                <fullName>Service Point</fullName>
            </value>
            <value>
                <fullName>Pickup Point</fullName>
            </value>
            <value>
                <fullName>LSP</fullName>
            </value>
            <value>
                <fullName>LSP SHIFT-X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>