force-app/main/default/objects/Asset/fields/CCR_ReplacementCountry__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementCountry__c</fullName>
    <description>Used By: CCR
Description: This value is updated depending on the Territory of user.</description>
    <label>Replacement Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTI_CountryISOs</valueSetName>
    </valueSet>
</CustomField>