force-app/main/default/objects/Asset/fields/CCR_ReplacementDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementDate__c</fullName>
    <description>Date/Time of replacement.</description>
    <label>Replacement Date</label>
    <type>DateTime</type>
</CustomField>