force-app/main/default/objects/Asset/fields/CCR_ReplacementDoneBy__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementDoneBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by: CCR Description: This allows reporting on the division and company of the users from the service center that performed the swap.</description>
    <label>Replacement Done By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>