force-app/main/default/objects/Asset/fields/CCR_ReplacementExternalReference__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementExternalReference__c</fullName>
    <description>Replacement Order Number, different by channel</description>
    <label>Replacement External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>