force-app/main/default/objects/Asset/fields/CCR_ReplacementReason__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementReason__c</fullName>
    <description>Reason of replacement</description>
    <label>Replacement Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>