force-app/main/default/objects/Asset/fields/CCR_ReplacementSponsored_By__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementSponsored_By__c</fullName>
    <label>Replacement Sponsored By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Care+</fullName>
                <label>IQOS CARE PLUS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>