force-app/main/default/objects/Asset/fields/CCR_ReplacementSystemDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_ReplacementSystemDate__c</fullName>
    <description>Used by: CCR
Description: Date of asset replacement</description>
    <label>(QURE) Replacement System Date</label>
    <type>DateTime</type>
</CustomField>