force-app/main/default/objects/Asset/fields/CCR_Replaces__c.field-meta.xml
<CustomField>
    <fullName>CCR_Replaces__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference of the replaced device to be populated by VF page or API only</description>
    <label>Replaces</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>