force-app/main/default/objects/Asset/fields/CCR_SpiceId__c.field-meta.xml
<CustomField>
    <fullName>CCR_SpiceId__c</fullName>
    <formula>Contact.CCR_ConsumerUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(QURE) Spice Id</label>
    <type>Text</type>
</CustomField>