force-app/main/default/objects/Asset/fields/CCR_SubscribedDevice__c.field-meta.xml
<CustomField>
    <fullName>CCR_SubscribedDevice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User by : CCR Description : stores information about whether the asset is subscribed</description>
    <label>Subscribed Device</label>
    <type>Checkbox</type>
</CustomField>