force-app/main/default/objects/Asset/fields/CCR_SubscriptionID__c.field-meta.xml
<CustomField>
    <fullName>CCR_SubscriptionID__c</fullName>
    <description>User by : CCR Description : to store subscription id of the asset.</description>
    <label>Subscription ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>