force-app/main/default/objects/Asset/fields/CCR_Version__c.field-meta.xml
<CustomField>
    <fullName>CCR_Version__c</fullName>
    <description>Device Product Code Version</description>
    <formula>CCR_DeviceProductCode__r.CCR_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version</label>
    <type>Text</type>
</CustomField>