force-app/main/default/objects/Asset/fields/CCR_WarrantyDueDate_Flag__c.field-meta.xml
<CustomField>
    <fullName>CCR_WarrantyDueDate_Flag__c</fullName>
    <description>Used by: CCR
Description: To show green/red flag depends on Warranty Due Date.</description>
    <formula>IF(ISBLANK(KDCE_fm_WarrantyDate__c), &quot;&quot;,
IF(KDCE_fm_WarrantyDate__c &gt;= Today(), IMAGE(&quot;/resource/WarrantyFlag/GreenFlag.png&quot;, &quot;Green&quot;, 20,20),
IMAGE(&quot;/resource/WarrantyFlag/RedFlag.png&quot;, &quot;Red&quot;,20,20)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Due Date Flag</label>
    <type>Text</type>
</CustomField>