force-app/main/default/objects/Asset/fields/fm_PurchaseCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>fm_PurchaseCompletionDate__c</fullName>
    <formula>TODAY()-PurchaseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>구매경과일자</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>