force-app/main/default/objects/Asset/fields/KDCE_DeviceLabelling__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DeviceLabelling__c</fullName>
    <description>[KDCE] Status가 변경됨에 따라 Device Label도 변경된다</description>
    <label>Device Labelling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Online Trade-in Return</fullName>
            </value>
            <value>
                <fullName>Online Trade-in</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Rental Purchased</fullName>
            </value>
            <value>
                <fullName>To be disposed</fullName>
            </value>
            <value>
                <fullName>Return Fail</fullName>
            </value>
            <value>
                <fullName>Offline Trade-in</fullName>
            </value>
            <value>
                <fullName>Offline Trade-in Return</fullName>
            </value>
            <value>
                <fullName>E-commerce Rental</fullName>
            </value>
            <value>
                <fullName>Offline Rental</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Rental Returned</fullName>
                <isActive>false</isActive>
                <label>Rental Returned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>