force-app/main/default/objects/Asset/fields/KDCE_DeviceType__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DeviceType__c</fullName>
    <description>[KDCE] Device Type</description>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DeviceType</valueSetName>
    </valueSet>
</CustomField>