force-app/main/default/objects/Asset/fields/KDCE_DisposalDevice__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DisposalDevice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>렌탈기기 불용처리를 할 때 쓰는 플래그 필드. 해당 필드를 Check 하면 to be disposed로 변경되고, 한번 불용처리가 기기는 다시 돌아올 수 없다.</description>
    <inlineHelpText>렌탈 불용처리 체크필드</inlineHelpText>
    <label>Disposal Device</label>
    <type>Checkbox</type>
</CustomField>