force-app/main/default/objects/Asset/fields/KDCE_fm_Color__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_Color__c</fullName>
    <formula>CCR_DeviceProductCode__r.CCR_Color__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color</label>
    <type>Text</type>
</CustomField>