force-app/main/default/objects/Asset/fields/KDCE_fm_IsMCSync__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_IsMCSync__c</fullName>
    <formula>TEXT(Status) = &apos;Active&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Sync Asset</label>
    <type>Checkbox</type>
</CustomField>