force-app/main/default/objects/Asset/fields/KDCE_fm_ProductEAN__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_ProductEAN__c</fullName>
    <description>[KDCE] Product Barcode</description>
    <formula>Product2.KDCE_EANCode__c</formula>
    <label>Product EAN</label>
    <type>Text</type>
</CustomField>