force-app/main/default/objects/Asset/fields/KDCE_fm_ProductName__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_ProductName__c</fullName>
    <formula>if (Product2.KDCE_MG_ProductName_ko__c != null, Product2.KDCE_MG_ProductName_ko__c, Product2.KDEC_POS_ProductName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>