force-app/main/default/objects/Asset/fields/KDCE_fm_RegisterAvailable__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_RegisterAvailable__c</fullName>
    <formula>AND(
	OR(TEXT(Status) = &apos;Produced&apos;, TEXT(Status) = &apos;Active&apos;),
	ContactId = NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Register Available</label>
    <type>Checkbox</type>
</CustomField>