force-app/main/default/objects/Asset/fields/KDCE_fm_RegistrationCheck__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_RegistrationCheck__c</fullName>
    <formula>CCR_NumberOfConsumers__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Check</label>
    <type>Checkbox</type>
</CustomField>