force-app/main/default/objects/Asset/fields/KDCE_fm_RentalCheck__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_RentalCheck__c</fullName>
    <formula>KDCE_ru_RentalCount__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental Check</label>
    <type>Checkbox</type>
</CustomField>