force-app/main/default/objects/Asset/fields/KDCE_fm_ReplacementAsset__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_ReplacementAsset__c</fullName>
    <formula>IF(NOT(ISNULL(CCR_ReplacementDate__c)), true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replacement Device</label>
    <type>Checkbox</type>
</CustomField>