force-app/main/default/objects/Asset/fields/KDCE_fm_WarrantyDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_WarrantyDate__c</fullName>
    <description>[KDCE] Warranty Date</description>
    <formula>IF(Not(ISNULL(KDCE_OriginalWarrantyDate__c)), KDCE_OriginalWarrantyDate__c,
IF(AND(ISNULL(KDCE_ShipmentDate__c), ISNULL(PurchaseDate)), ADDMONTHS( DATEVALUE(CCR_ParentProductionDateTime__c), 15),
IF(AND(NOT(ISNULL(KDCE_ShipmentDate__c)),NOT(ISNULL(PurchaseDate)), PurchaseDate &lt; KDCE_ShipmentDate__c) , ADDMONTHS(KDCE_ShipmentDate__c,12),
IF(AND(NOT(ISNULL(KDCE_ShipmentDate__c)),NOT(ISNULL(PurchaseDate)), PurchaseDate &gt;= KDCE_ShipmentDate__c), ADDMONTHS(PurchaseDate,12),
IF(AND(NOT(ISNULL(KDCE_ShipmentDate__c)),ISNULL(PurchaseDate)), ADDMONTHS(KDCE_ShipmentDate__c,12),
IF(AND(NOT(ISNULL(PurchaseDate)),ISNULL(KDCE_ShipmentDate__c)), ADDMONTHS(PurchaseDate,12), ADDMONTHS( DATEVALUE(CCR_ParentProductionDateTime__c), 15)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>보증일. 구매일이 있으면 구매일+12개월, 구매일이 없으면 생산일+15개월</inlineHelpText>
    <label>Warranty Due Date</label>
    <type>Date</type>
</CustomField>