force-app/main/default/objects/Asset/fields/KDCE_IsCarePlusHistory__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsCarePlusHistory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCarePlusHistory</label>
    <type>Checkbox</type>
</CustomField>