force-app/main/default/objects/Asset/fields/KDCE_IsManualFix__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsManualFix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Device Manual Fix</label>
    <type>Checkbox</type>
</CustomField>