force-app/main/default/objects/Asset/fields/KDCE_MigId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MigId__c</fullName>
    <description>마이그 아이디</description>
    <externalId>true</externalId>
    <label>MigId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>