force-app/main/default/objects/Asset/fields/KDCE_OriginalWarrantyDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OriginalWarrantyDate__c</fullName>
    <label>Original Warranty Due Date</label>
    <type>Date</type>
</CustomField>