force-app/main/default/objects/Asset/fields/KDCE_RentalCount__c.field-meta.xml
<CustomField>
    <fullName>KDCE_RentalCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>고객이 렌탈 할때마다 1번씩 증가함.</description>
    <label>Rental Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>