force-app/main/default/objects/Asset/fields/KDCE_ReplacementCount__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ReplacementCount__c</fullName>
    <label>Replacement Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>