force-app/main/default/objects/Asset/fields/KDCE_ReplacementReportUrl__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ReplacementReportUrl__c</fullName>
    <formula>IF( AND(ISBLANK (CCR_Replaces__c), ISBLANK( CCR_ReplacedBy__c )), &apos;No History&apos;,
    HYPERLINK(&quot;/lightning/r/Report/00O5g00000CezfCEAR/view?fv0=&quot; &amp; CCR_OriginalAsset__c, &quot;Show Replacement History&quot;, &quot;_self&quot;)
)</formula>
    <label>Replacement Report Url</label>
    <type>Text</type>
</CustomField>