force-app/main/default/objects/Asset/fields/KDCE_ReplacementSource__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ReplacementSource__c</fullName>
    <description>[KDCE] Replacement Source</description>
    <label>Replacement Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QURE</fullName>
            </value>
            <value>
                <fullName>KIT TO KIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>