force-app/main/default/objects/Asset/fields/KDCE_ru_RentalCount__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ru_RentalCount__c</fullName>
    <description>[KDCE] Rental Count (Link &amp; Rental)</description>
    <label>Rental Count (RU)</label>
    <summaryFilterItems>
        <field>CCR_AssetLifeCycle__c.CCR_Action__c</field>
        <operation>equals</operation>
        <value>Link</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CCR_AssetLifeCycle__c.KDCE_DeviceType__c</field>
        <operation>equals</operation>
        <value>Rental</value>
    </summaryFilterItems>
    <summaryForeignKey>CCR_AssetLifeCycle__c.CCR_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>