force-app/main/default/objects/Asset/fields/KDCE_ShipmentDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ShipmentDate__c</fullName>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>