force-app/main/default/objects/Asset/validationRules/KDCE_InvalidAssetPurchaseDate.validationRule-meta.xml
<ValidationRule>
    <fullName>KDCE_InvalidAssetPurchaseDate</fullName>
    <active>true</active>
    <description>구매일은 오늘이거나 과거일자만 입력가능합니다.</description>
    <errorConditionFormula>if (AND(ISCHANGED(PurchaseDate),!ISBLANK(PurchaseDate),PurchaseDate &gt; TODAY()), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>PurchaseDate</errorDisplayField>
    <errorMessage>구매일은 오늘이거나 과거일자만 입력가능합니다.</errorMessage>
</ValidationRule>