force-app/main/default/objects/Asset/listViews/Active_Asset.listView-meta.xml
<ListView>
    <fullName>Active_Asset</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.PURCHASE_DATE</columns>
    <columns>KDCE_fm_ProductName__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Asset</label>
</ListView>