force-app/main/default/objects/Asset/listViews/ProducedAsset.listView-meta.xml
<ListView>
    <fullName>ProducedAsset</fullName>
    <columns>ASSET.NAME</columns>
    <columns>CCR_CodentifyId__c</columns>
    <columns>CONTACT.NAME</columns>
    <columns>CCR_MaterialDescription__c</columns>
    <columns>CCR_MaterialGroupDescription__c</columns>
    <columns>CCR_DeviceProductCode__c</columns>
    <columns>ASSET.STATUS</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>CCR_SubscriptionID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Produced</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>DK000871</value>
    </filters>
    <label>Produced Asset</label>
</ListView>